--- a/index.html
+++ b/index.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <title>Generador de contraseñas</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <title>Control de Gastos Mensuales</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-     
-    <main class="container">
-        <div class="container__contenido">
-            <div class="container__informacion">
-                <div class="container__texto">
-                    <h1>Generador<span class="container__texto-azul"> de Contraseñas</span></h1>
-                    <div class="container__campo"> 
-                        <label class="texto__parrafo">Cantidad
-                            <input class="container__input" type="number" id="cantidad" >
-                        </label>
-                        <button class="boton_generar" id="generar" onclick="generar()" >Generar</button>
-                        <button class="boton_limpiar" id="limpiar" onclick="limpiar()" >Limpiar</button>
-                    </div> 
-                    <div class="container__campo">
-                        <input class="container__contrasena" type="text" id="contrasena" placeholder="contraseña">
-                    </div>
-                </div> 
+    <div class="main-container">
+        <div class="container">
+            <div class="img-container">
+                <img src="./assets/img/titulo.png" />
+            </div>
+            <div class="form-group">
+                <input type="text" id="nombreGasto" placeholder="Nombre del gasto">
+                <input type="text" id="descripcionGasto" placeholder="Descripción del gasto">
+                <input type="number" id="valorGasto" placeholder="Valor del gasto" min="0" step="0.01">
+                <button id="botonFormulario" onclick="clickBoton();">Agregar Gasto</button>
+            </div>
+            <ul id="listaDeGastos"></ul>
+            <div class="total">
+                Total Mensual: US $ <span id="totalGastos">0.00</span>
             </div>
         </div>
- 
-    </main>
-    
-    <script src="main.js"></script> 
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
